c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/malformed_abstract_array_declarator.c
int main(void) {
    // invalid abstract declarator syntax: pointer declarator can't follow
    // array size declarator
    return (int[3] *)0;
}